# dbt-chain-analysis-prototype

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  dbt_supervisor_main.py  fixed_segmented_search.py  hello.py  pyproject.toml  quick_streaming_test.py  run.py  segment_debug.py  simple_langgraph_example.py  test_file_analysis.py
.chainlit/: config.toml
dbt/graphs/: assistant.py
dbt/loggers/: __init__.py
dbt/skills/: __init__.py  curriculum_data.py  schemas.py
plan-sops/: SOP - Agentic Plan Formulation.md  SOP - Revising Agent Plan Formulation.txt  SOP - Testing Agent Plans.md
plans/: base-plan.md  chainlit-ui-plan.md  database-persistence-plan.md  file-structure-plan.md  langgraph-agent-plan.md
scripts/: doc_segmentation.py  loggers.py  mistral_ocr.py
